tests/snapshots/snapshot_fixtures__fixtures_cfg__pragma_once.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.cfg/pragma_once.c" (c, x86_64-unknown-linux-gnu)
global __const.main.value : rec_pragma_once_value = zero [cir_private, default, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_pragma_once_value, "value", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.value : rec_pragma_once_value*
    copy %1, %3
    %4 = get_member %1[0] "value" : s32i*
    %5 = load %4 : s32i, align 4
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
